examples/typechecking/count_effect.an
effect Count with
    count: fn Unit -> Unit

foo () =
    count ()
    repeat 10 fn _ -> count ()

handle_count f =
    handle
        f ()
        0
    | count () -> 1 + resume ()

handle_count foo

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// effect Count with
//     (count: (error)): fn Unit -> Unit
// 
// (foo: fn Unit -> Unit can _) () =
//     (count: (error)) ()
//     (repeat: fn Usz (fn Usz -> Unit pure) -> Unit pure) 10 (fn (_: Usz) -> (count: (error)) ())
// 
// (handle_count: fn _ -> _ can _) (f: _) =
//     handle 
//         (f: (error)) ()
//         0
//     | (count: (error)) () -> 1 (+: (error)) (resume: (error)) ()

// expected stderr:
// examples/typechecking/count_effect.an:5:5
// 4 | foo () =
// 5 |     count ()	// error: `count` not found in scope
//   |     ^^^^^
// 6 |     repeat 10 fn _ -> count ()
// 
// examples/typechecking/count_effect.an:6:23
// 5 |     count ()
// 6 |     repeat 10 fn _ -> count ()	// error: `count` not found in scope
//   |                       ^^^^^
// 
// examples/typechecking/count_effect.an:9:5
//  8 | handle_count f =
//  9 |     handle	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^
// 10 |         f ()
// 
// examples/typechecking/count_effect.an:14:14
// 14 | handle_count foo	// error: Expected `=` to begin the function body but found `foo`
//    |              ^^^
// 
// Found 4 errors and 0 warnings

